--- a/bloqueio/index.html
+++ b/bloqueio/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="imagemBloqueio">
         <img src="img/bloqueio.jpg"/>
+        <a id="linkBtn" href="http://131.221.224.50:18080/sac/open.do?action=open&sys=SAC"><button type="button" id="btn">Acesso a central do cliente</button></a>
     </div>
 </body>
 </html>
